osha.theme Changelog
====================

1.3.36 (unreleased)
-------------------

- removed template compression to avoid unicode bug 
  [pilz]
- fixed stale batch parameter from oshtopic_view
  [pilz]
- fixed access to portal type in oshmacros
  [pilz]

1.3.35 (2010-10-08)
-------------------

- Made Facebook Imagelink conditional 
  [pilz]
- Fixed ordering for oshmail previous issues
  [pilz]

1.3.34 (2010-10-07)
-------------------

- Added new oshmail registration page
  [pilz]


1.3.33 (2010-09-12)
-------------------

- Styles for slc.sminarportal #1506 [thomasw]

1.3.32 (2010-09-05)
-------------------

- more intelligent cachekey for getSingleEntryPoints that consideres the
  preferred language and server-url [thomasw]


1.3.31 (2010-08-25)
-------------------

- add possibility to omit_border to documentfallback portlet #1695 [thomasw]
- finally deploy #766, a link to the en publications [pilz]
- more sesnible cache-key for image/flash portlet [thomasw]

1.3.30 (2010-07-22)
-------------------

- Bugfix: css portletImage-flash is in a div element rather than a dl (deroiste)

1.3.29 (2010-07-18)
-------------------

- added the linkabsolutizer used for oshmail also for shortmessage
  [pilz]
- OSHAContentSwitcherViewlet: Only call IAnnotation on objects that are
  IAnnotatable (thomasw)


1.3.28 (2010-07-14)
-------------------

- Added i18n translation for title of publications-list #728 (thomasw)
- added a link rel canonical to have a canonical url for GA #1194 
  [pilz]
- fixed wrong nesting in topics-view
  [pilz]
- removed stale GA parameters where they should not be
  [pilz]


1.3.27 (2010-07-06)
-------------------

- slc.telescope view: Replacing urls which depend on the context of
  the target object with its proper url. #1150 (deroiste)
- added statement for flash margin to fix overlapping issue when boxed (pilz)
- removed International network dropdown #1405 (thomasw)
- No more extrawurst for German FOP: removed European and International